Update filter handler